# ogre_tutorial

./: CMakeLists.txt  LICENSE  README.md  contributors.txt
media/: CMakeLists.txt
media/materials/: CMakeLists.txt
media/packs/: CMakeLists.txt
res/: CMakeLists.txt
res/screenshot/: CMakeLists.txt
src/: CMakeLists.txt  ogre_tutorial_win32_debug.props  ogre_tutorial_win32_release.props
src/init_blue_screen/: CMakeLists.txt  init_blue_screen.cpp
src/mesh_load_by_scenemanager/: CMakeLists.txt  mesh_load_by_scenemanager.cpp
src/relative_rotate/: CMakeLists.txt  relative_rotate.cpp
src/relative_translate/: CMakeLists.txt  relative_translate.cpp
src/rotate_pitch_yaw_roll/: CMakeLists.txt  rotate_pitch_yaw_roll.cpp
src/scale/: CMakeLists.txt  scale.cpp  scale.vcxproj.user.in
